--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -28,8 +28,9 @@
     color: #dddddd;
   }
   
-  img {
+  .logo-logout img {
     width: 150px;
+    height: 30px;
     transition: width 0.3s ease;
   }
   
@@ -98,3 +99,48 @@
     }
   }
   
+  .logout {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    width: auto;
+}
+
+.logout:hover {
+    background-color: #45a049;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.logout:focus {
+    outline: none;
+    box-shadow: 0px 0px 0px 4px rgba(76, 175, 80, 0.4);
+}
+
+
+@media (max-width: 768px) {
+    .logout {
+        padding: 8px 16px;
+        font-size: 0.9rem;
+    }
+}
+
+@media (max-width: 600px) {
+    .logout {
+        padding: 6px 12px;
+        font-size: 0.8rem;
+    }
+}
+
+
+.logo-logout{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
